fixed: header misalignment with dynamic max-width calc

--- a/src/app/aboutme/aboutme.component.scss
+++ b/src/app/aboutme/aboutme.component.scss
@@ -4,7 +4,7 @@ section {
     background-color: #1c1c1c;
     display: flex;
     align-items: flex-start;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 100px;
     
     >div {
