--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -44,6 +44,7 @@ section {
         }
     
         >input {
+            width: 390px;
             ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
                 color:    #909;
             }
