--- a/src/app/landingpage/landingpage.component.scss
+++ b/src/app/landingpage/landingpage.component.scss
@@ -5,7 +5,8 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    // overflow-x: hidden;
+    // max-width: 1440px;
+    overflow: hidden;
 }
 
 .infinite_scroller {
@@ -17,7 +18,7 @@ section {
     background-color: rgba(255, 255, 255, 0.25);
     transform: rotate(-3deg);
     z-index: 1;
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(3px);
     overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
@@ -29,7 +30,6 @@ section {
     animation: marquee 30s linear infinite;
     align-items: center;
     margin-top: 8px;
-    // white-space: nowrap;
     >p {
         font-family: 'Karla', sans-serif;
         font-size: 32px;
