--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -16,8 +16,6 @@ footer {
         width: 256px;
         color: white;
         >.logo_link {
-            background-image: url('./../../../assets/svg/nav/name_logo/name_logo_dm.png');
-            
             >img {
                 height: 80px;
                 width: 180px;
